# kclib

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  kclib.sublime-project  libkancolle.sublime-project
include/: LKTranslator.h
include/kclib/: LKNetworkImpl.h
include/kclib/qt/: LKQtNetworkImpl.h
src/: CMakeLists.txt  LKNetworkImpl.h  LKPlatformInterface.h  LKStreamTranslator.cpp  LKStreamTranslator.h  LKTranslator.cpp  LKTranslator.h  LKUtil.cpp  LKUtil.h  crc32.h
src/qt/: CMakeLists.txt  LKQtNetworkImpl.cpp  LKQtNetworkImpl.h
tests/: CMakeLists.txt  TestLKPlatformInterface.cpp  test_KCTranslator.cpp  test_LKStreamTranslator.cpp  test_LKTranslator.cpp  test_LKUtil.cpp  test_LKUtil_escaping.cpp  test_LKUtil_unescape.cpp
tests/qt/: CMakeLists.txt  TestQtNetworkImpl.cpp  TestQtNetworkImpl.h
