if(CMAKE_COMPILER_IS_GNUCXX OR APPLE)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()

include("${PROJECT_SOURCE_DIR}/vendor/includes.cmake")
include_directories("${PROJECT_SOURCE_DIR}/src")

file(GLOB SOURCES *.cpp)
foreach(file ${SOURCES})
	get_filename_component(target ${file} NAME_WE)
	add_executable(${target} ${file})
	target_link_libraries(${target} kclib)
	add_test(NAME ${target} COMMAND ${target})
	if(TARGET check)
		add_dependencies(check ${target})
	endif()
endforeach()
